--- a/openchrom/plugins/net.openchrom.nmr.processing.supplier.base/plugin.xml
+++ b/openchrom/plugins/net.openchrom.nmr.processing.supplier.base/plugin.xml
@@ -4,28 +4,22 @@
    <extension
          point="org.eclipse.chemclipse.nmr.processor.scanProcessor">
       <ScanProcessor
-            description="This processor is responsible for the zero filling."
-            id="net.openchrom.nmr.processing.supplier.base.zeroFilling"
-            processor="net.openchrom.nmr.processing.supplier.base.core.ZeroFilling"
-            processorName="Zero Filling">
-      </ScanProcessor>
-      <ScanProcessor
             description="This processor applies the Fourier Transformation."
             id="net.openchrom.nmr.processing.supplier.base.fourierTransformation"
             processor="net.openchrom.nmr.processing.supplier.base.core.FourierTransformationProcessor"
             processorName="Fourier Transformation">
       </ScanProcessor>
       <ScanProcessor
-            description="This processor appliers the phase shift."
-            id="net.openchrom.nmr.processing.supplier.base.phaseShift"
-            processor="net.openchrom.nmr.processing.supplier.base.core.PhaseShift"
-            processorName="Phase Shift">
-      </ScanProcessor>
-      <ScanProcessor
             description="This processor applies the phase correction."
             id="net.openchrom.nmr.processing.supplier.base.phaseCorrection"
             processor="net.openchrom.nmr.processing.supplier.base.core.PhaseCorrectionProcessor"
             processorName="Phase Correction">
+      </ScanProcessor>
+      <ScanProcessor
+            description="This processor applies the baseline correction."
+            id="net.openchrom.nmr.processing.supplier.base.baselineCorrection"
+            processor="net.openchrom.nmr.processing.supplier.base.core.BaselineCorrectionProcessor"
+            processorName="Baseline Correction">
       </ScanProcessor>
    </extension>
 
