The chromatogram.msd.processing bundle has been refactored to xxd.processing.

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -4,7 +4,7 @@
          point="org.eclipse.ui.preferencePages">
       <page
             name="Template Processor"
-            category="org.eclipse.chemclipse.chromatogram.msd.process.ui.preferences.processPreferencePage"
+            category="org.eclipse.chemclipse.xxd.process.ui.preferences.processPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PreferencePage"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.preferencePage">
       </page>         
