--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.pdf.ui/plugin.xml
@@ -10,5 +10,16 @@
             name="PDF Chromatogram MS Converter">
       </page>
    </extension>
-
+   <extension
+         point="org.eclipse.chemclipse.chromatogram.xxd.report.chromatogramReportSupplier">
+      <ChromatogramReportSupplier
+            description="Chromatogram PDF Report."
+            fileExtension=".pdf"
+            fileName="OpenChromReport"
+            id="net.openchrom.msd.converter.supplier.pdf.ui.chromatogramReportPDF"
+            reportGenerator="net.openchrom.msd.converter.supplier.pdf.ui.converter.ReportPDF"
+            reportName="PDF Report (*.pdf)"
+            reportSettings="net.openchrom.msd.converter.supplier.pdf.ui.settings.ReportSettings">
+      </ChromatogramReportSupplier>  
+   </extension>
 </plugin>
