The chromatogram converter handling has been improved.

--- a/openchrom/plugins/net.openchrom.wsd.converter.supplier.abif/plugin.xml
+++ b/openchrom/plugins/net.openchrom.wsd.converter.supplier.abif/plugin.xml
@@ -5,7 +5,7 @@
          point="org.eclipse.chemclipse.wsd.converter.chromatogramSupplier">
       <ChromatogramSupplier
             description="Reads ABIF Sanger Sequencing Trace Files."
-            exportConverter="net.openchrom.wsd.converter.supplier.abif.core.ChromatogramExportConverter"
+            exportConverter="org.eclipse.chemclipse.converter.chromatogram.DefaultExportConverter"
             fileExtension=".ab1"
             filterName="ABIF Sanger Sequencing Trace File (*.ab1)"
             id="net.openchrom.wsd.converter.supplier.ab1"
