--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -49,6 +49,12 @@
             category="org.eclipse.chemclipse.chromatogram.msd.quantitation.ui.preferences.quantifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PageStandardsReferencer"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pageStandardsReferencer">
-      </page>                           
+      </page>
+      <page
+            name="Peak Integrator Template"
+            category="org.eclipse.chemclipse.chromatogram.xxd.integrator.ui.preferences.integratorPreferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakIntegrator"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIntegrator">
+      </page>                            
    </extension>
 </plugin>
